create flow join class
